[fix]: fixing the complete order spacing

--- a/src/containers/ProductPageBuilder/components/Workspace/components/Section/components/StaticSections/components/CompleteOrderBtn/style.css
+++ b/src/containers/ProductPageBuilder/components/Workspace/components/Section/components/StaticSections/components/CompleteOrderBtn/style.css
@@ -1,7 +1,7 @@
 .template-complete-order{
   font-size: 20px;
   color:white;
-  padding: 8px 0px;
+  padding: 2.7px 0px;
   min-width: 150px;
   display: flex;
   justify-content: center;
